--- a/portfolio/templates/portfolio/customer_list.html
+++ b/portfolio/templates/portfolio/customer_list.html
@@ -64,6 +64,9 @@
             {% endfor %}
             </tbody>
         </table>
+   <div class="row">
+            <a href="{% url 'portfolio:customer_create' %}"><span class="btn btn-primary">Add Customer</span></a>
+        </div>
 
     </div>
     </body>
