--- a/portfolio/templates/portfolio/stock_edit.html
+++ b/portfolio/templates/portfolio/stock_edit.html
@@ -1,5 +1,7 @@
 {% extends 'portfolio/base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
+
 {% block content %}
     <h1>Edit Stock</h1>
     <form method="POST" class="stock-form">{% csrf_token %}
