--- a/portfolio/templates/portfolio/investment_create.html
+++ b/portfolio/templates/portfolio/investment_create.html
@@ -1,13 +1,12 @@
 {% extends "portfolio/base.html" %}
 {% load static %}
-{% load crispy_forms_tags %}
 
 {% block content %}
 <h1>Add a New Investment</h1>
 <form method="POST" form="investment-form">
 
     {% csrf_token %}
-    {{form|crispy}}
+    {{form.as_p}}
 
     <button type="submit" class="save btn btn-default">
         Add Investment
