--- a/portfolio/templates/portfolio/investment_edit.html
+++ b/portfolio/templates/portfolio/investment_edit.html
@@ -1,12 +1,11 @@
 {% extends "portfolio/base.html" %}
-{% load crispy_forms_tags %}
 {% load static %}
 
 {% block content %}
 <h1>Edit Investment</h1>
 <form method="post" form="investment-form">
     {% csrf_token %}
-    {{form|crispy}}
+    {{form.as_p}}
     <button type="submit" class="btn btn-primary">Update Investment</button>
 </form>
 
