--- a/portfolio/templates/portfolio/stock_new.html
+++ b/portfolio/templates/portfolio/stock_new.html
@@ -1,9 +1,8 @@
 {% extends 'portfolio/base.html' %}
-{% load crispy_forms_tags %}
 {% block content %}
     <h1>Add a New Stock</h1>
     <form method="POST" class="stock-form">{% csrf_token %}
-          {{ form|crispy }}
+          {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
 {% endblock %}
