--- a/portfolio/templates/accounts/password_reset_email.html
+++ b/portfolio/templates/accounts/password_reset_email.html
@@ -1,5 +1,5 @@
 
 Someone asked for password reset for email {{ email }}. Follow the link below:
 
-{{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uidtoken=token %}
+{{ protocol }}://{{ domain }}{% url "portfolio:password_reset_confirm" uidb64=uidtoken=token %}
 Your username, in case you've forgotten: {{ user.get_username }}
