auth_view modified

--- a/portfolio/templates/registration/password_change_form.html
+++ b/portfolio/templates/registration/password_change_form.html
@@ -1,4 +1,4 @@
-{% extends "portfolio/../portfolio/base.html" %}
+{% extends "portfolio/base.html" %}
 {% block title %}Change you password{% endblock %}
 {% block content %}
 <h1>Change you password</h1>
