--- a/portfolio/templates/registration/logged_out.html
+++ b/portfolio/templates/registration/logged_out.html
@@ -1,4 +1,4 @@
-{% extends "portfolio/../portfolio/base.html" %}
+{% extends "portfolio/base.html" %}
 {% block title %}Logged out{% endblock %}
 {% block content %}
 <h1>Logged out</h1>
