--- a/portfolio/templates/registration/login.html
+++ b/portfolio/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "portfolio/../portfolio/base.html" %}
+{% extends "portfolio/base.html" %}
 {% block content %}
     {% if form.errors %}
     <br />
