--- a/portfolio/templates/registration/password_reset_confirm.html
+++ b/portfolio/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "portfolio/base.html" %}
 {% block title %}Reset your password{% endblock %}
 {% block content %}
 <h1>Reset your password</h1>
@@ -10,7 +10,6 @@
 <p><input type="submit" value="Change my password" /></p>
 </form>
 {% else %}
-<p>The password reset link was invalid, possibly because it has
-already been used. Please request a new password reset.</p>
+<p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
 {% endif %}
 {% endblock %}
