--- a/portfolio/templates/registration/password_reset_form.html
+++ b/portfolio/templates/registration/password_reset_form.html
@@ -1,4 +1,4 @@
-{% extends "portfolio/../portfolio/base.html" %}
+{% extends "portfolio/base.html" %}
 
 {% block title %} Reset your password {% endblock %}
 
