--- a/portfolio/templates/registration/register.html
+++ b/portfolio/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% extends "portfolio/../portfolio/base.html" %}
+{% extends "portfolio/base.html" %}
 {% block title %}Create an account{% endblock %}
 {% block content %}
 <h1>Create an account</h1>
