--- a/portfolio/templates/registration/register_done.html
+++ b/portfolio/templates/registration/register_done.html
@@ -1,4 +1,4 @@
-{% extends "portfolio/../portfolio/base.html" %}
+{% extends "portfolio/base.html" %}
 {% block title %}Welcome{% endblock %}
 {% block content %}
 <h1>Welcome {{ new_user.first_name }}!</h1>
