--- a/portfolio/templates/portfolio/investment_list.html
+++ b/portfolio/templates/portfolio/investment_list.html
@@ -28,8 +28,9 @@
 
 <div class="row">
     <h2 style="padding-left: 15px">Investment Information</h2>
-
+    <a href="{% url 'portfolio:investments_json' %}" style="padding-left: 15Px;">View Investment API</a>
 </div>
+
 
 <div>
     <table class="table table-striped table-bordered table-hover">
