--- a/portfolio/templates/portfolio/currency.html
+++ b/portfolio/templates/portfolio/currency.html
@@ -1,11 +1,25 @@
 {% extends "portfolio/base.html" %}
 {% block content %}
   <div class="row">
-<form method="POST" action=".">
-    {{ form.as_ul }}
-    {% csrf_token %}
-    <button type="submit">Convert</button>
-</form>
+{#<form method="POST" action="." class="row" style="padding-top: 20px">#}
+{#    From: <input type="text" value="{{ currency.from_currency }}">#}
+{#    To: <input type="text" value="{{ currency.to_currency }}">#}
+{#    From Amount: <input type="text" value="{{ currency.from_number }}">#}
+{#    To Amount: <ul>{{ currency.to_number }}</ul>#}
+{##}
+{#    {% csrf_token %}#}
+{#</form>#}
 
+<div style="padding-top: 20px">
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+    <button type="submit">Convert</button>
+    </form>
+
+
+</div>
+  <h2>Result: {{ to_number }}</h2>
   </div>
+
 {% endblock %}
